# Maa4Pvz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  DEVELOPMENT_PHASE1.md  DEVELOPMENT_PHASE2.md  DEVELOPMENT_PHASE3.md  DEVELOPMENT_PHASE4.md  README.md
.claude/skills/changelog/: SKILL.md
.claude/skills/maa-cyber-fortune-master/: SKILL.md
.claude/skills/maa-issue-log-analysis/: KNOWLEDGE.md  SKILL.md
.cursor/skills/code-review-report/: SKILL.md
.devin/: wiki.json
include/: AsstCaller.h
resource/: config.json
resource/tasks/: ft_crickets_tasks.json  homepage_tasks.json  open_activity_tasks.json
src/Cpp/: main.cpp
src/MaaCore/: Assistant.cpp  Assistant.h  AsstCaller.cpp  CMakeLists.txt
src/MaaCore/Common/: AsstTypes.h
src/MaaCore/Config/: ResourceLoader.cpp  TemplResource.cpp  TemplResource.h
src/MaaCore/Controller/: AdbController.cpp  Controller.cpp  Controller.h  ControllerAPI.h  MaaFwAndroidNativeController.cpp  MaaFwAndroidNativeController.h  MaaFwControlUnitInterface.h  MumuExtras.cpp
src/MaaCore/Utils/: DebugImageHelper.hpp  Logger.hpp
src/MaaCore/Vision/: BestMatcher.cpp  FeatureMatcher.cpp  MaskedCcoeffMatcher.cpp  MaskedCcoeffMatcher.h  Matcher.cpp  Matcher.h  MultiMatcher.cpp  OCRer.cpp  RegionOCRer.cpp  TemplDetOCRer.h  VisionHelper.cpp
src/MaaUpdater/: CMakeLists.txt  main.cpp
src/MaaUpdater/testdata/: 文件名输出测试.json
src/MaaWpfGui/: App.xaml  App.xaml.cs  MaaWpfGui.csproj  app.manifest
tools/: maadeps-download.py
tools/ImageCropper/: README.md  main.py  requirements.txt
(+151 files in other folders)
